js/js.translator/testData/incremental/invalidation/jsSymbol/lib3/lib.1.kt
class TestClass : FooBarImpl() {
    override fun default(s: String): String = "TestClass"
}
